--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -7,9 +7,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <ul>
-      <li><a href="./js/1-timer.js">Timer</a></li>
-      <li><a href="./js/2-snackbar.js">Snackbar</a></li>
-    </ul>
+    <p><a href="./index.html">Go back</a></p>
+    <script type="module" src="./js/1-timer.js"></script>
   </body>
 </html>
