--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home work 10</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <ul>
-      <li><a href="./js/1-timer.js">Timer</a></li>
-      <li><a href="./js/2-snackbar.js">Snackbar</a></li>
+      <li><a href="./1-timer.html">Timer</a></li>
+      <li><a href="./2-snackbar.html">Snackbar</a></li>
     </ul>
   </body>
 </html>
